--- a/style.css
+++ b/style.css
@@ -231,10 +231,11 @@ a:active {
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
 
     .Icon{
         display: none;
+        visibility: hidden;
     }
 
 }
