--- a/style.css
+++ b/style.css
@@ -15,9 +15,46 @@ img {
     height: auto;
 }
 
+form {
+    margin: 0.25rem;
+}
+
 input, button, textarea {
     font: inherit;
 }
+
+label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 0.25rem;
+}
+
+input, textarea {
+    margin-bottom: 1rem;
+}
+
+input, textarea, button {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    resize: none;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+
+
 
 /* || Variables */
 
@@ -243,7 +280,6 @@ a:active {
 /* || BACK TO TOP BUTTON */
 
 #ToTop {
-    display: none;
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -251,7 +287,9 @@ a:active {
     cursor: pointer;
     font-size: 16px;
     width: 100px;
+    display: none;
 }
+
 #ToTop:hover {
     background-color: #45a049;
 }
