--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ a:active {
 
 @media screen and (max-width: 540px) {
 
-    .Icon{
+    .Nav .Icon{
         display: none;
         visibility: hidden;
     }
